Adicionado supressWarning para avisos do while true. Modificado atributo para privado. Corrigido nome dos atributos constantes. Removido atributo não utilizado. Modificado para fazer o log apenas da classe de log. Corrigdido bug em que o barbeira não voltava para a cadeira quando dormia